--- a/templates/index.html
+++ b/templates/index.html
@@ -2,22 +2,17 @@
 <html lang="en">
 <head>
     <title>Premier League Stats Dashboard</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!--google fonts-->
-     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}"> <!--link to css stylesheet-->
-     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-        }
-    </style> <!--make font-->
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}"> <!--link to css stylesheet-->
 </head>
 <body>
 
-    <img src="/static/images/premier-league-logo.png" alt="Premier League Logo" class="banner"> <!--banner-->
+    <img src="{{ url_for('static', filename='images/premier-league-logo.png') }}" alt="Premier League Logo" class="banner"> <!--banner-->
 
     <h1>Premier League Stats Dashboard ⚽</h1> <!--main header-->
 
- <!--form-->
-    <form method="POST" style="text-align:center;">
+    <!--form-->
+    <form method="POST">
         <label for="season">Select Season:</label>
         <select name="season" id="season" required>
             {% for season in season_options %}
@@ -38,7 +33,7 @@
     </form>
 
     {% if plot_url %}
-    <div style="text-align:center; margin-bottom:20px;">
+    <div class="club-section">
         <img src="{{ url_for('static', filename='club_logos/' + request.form.club.replace(' ', '_').lower() + '.png') }}"
             alt="{{ club }} logo"
             class="club-logo"><br>
@@ -48,13 +43,13 @@
     {% endif %}
 
     {% if message %}
-        <p style="text-align:center; font-size:20px; margin-top:20px;">{{ message }}</p>
+        <p class="message">{{ message }}</p>
     {% endif %}
 
     {% if stats_summary %}
         <div class="stats-summary">
             <h3>Stats Summary for {{ club.title() }} - Season {{ season }}</h3>
-            <ul style="list-style:none; padding:0;">
+            <ul>
                 {% for key, value in stats_summary.items() %}
                     <li><strong>{{ key }}:</strong> {{ value }}</li>
                 {% endfor %}
